--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
 }
 
 .shadow {
-    box-shadow: 0 0 20px gainsboro;
+    box-shadow: 0 0 20px rgb(0, 0, 0);
     border-radius: 10px;
 }
 nav ul{
@@ -123,7 +123,7 @@ nav li {
         font-size: 30px;
     }
     nav ul {
-        background-color: rgb(243, 251, 254);
+        background-color: rgb(189, 0, 160);
     }
 }
 
@@ -132,7 +132,7 @@ nav li a {
 }
 
 nav li:hover {
-    background-color:  rgb(225, 245, 253);
+    background-color:  rgb(22, 159, 213);
 }
 
 .text-right{
@@ -156,13 +156,13 @@ a {
 }
 
 .bg-azul-o {
-    background-color: rgb(0 157 222);
+    background-color: rgb(222, 30, 0);
 }
 .bg-azul-c {
-    background-color: rgb(240, 249, 252);
+    background-color: rgb(255, 0, 221);
 }
 .bg-orange {
-    background-color: orange;
+    background-color: rgb(0, 0, 0);
 }
 .text-white {
     color: white;
@@ -170,7 +170,7 @@ a {
 .text-red {
     color: red;
     font-size: 30px;
-    background-color: cyan;
+    background-color: rgb(0, 3, 3);
 }
 footer h1 {
     border-bottom-left-radius: 10px;
@@ -220,4 +220,37 @@ h1 {
 #listas .desordenada li li li {
     list-style-type: circle;
 }
-
+.formlogin{
+    float: left;
+    width: 50%;
+}
+.formregister {
+    float: right;
+    width: 50%;
+}
+.cb{
+    clear: both;
+}
+.formhtml5 {
+    width: 50%;
+    margin: 0 auto;
+    background-color: aquamarine;
+}
+.col-3{
+    width: 350px;
+    height: 350px;;
+    margin: auto 10%;
+}
+.video{
+    width: 500px;
+    height: 300px;
+    margin-left: 31%;
+}
+.audio{
+    margin-left: 39%;
+}
+#logo13{
+    margin-top: 30%;
+    width: 120px;
+    height: 120px;
+}
